Add devise common contents design

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -76,6 +76,17 @@ a:hover {
   font-weight: bold;
 }
 
+.devise-common-message a {
+  color: #fff;
+  transition: 0.3s;
+}
+
+.devise-common-message a:hover {
+  color: #0a9dd1;
+  transition: 0.3s;
+}
+
+
 
 
 // LOGIN
