--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -25,5 +25,5 @@
       br
       = f.password_field :password_confirmation, autocomplete: "new-password"
     .actions
-      = f.submit "サインイン"
+      = f.submit "サインアップ"
   = render "devise/shared/links"
