Add post show design for main contents

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -464,14 +464,16 @@ footer {
 
 .post-main-contents {
   margin-left: 15%;
-  padding-right: 34%;
+  padding-left: 15%;
+  padding-right: 15%;
   background-color: #fff;
 }
 
 .post-show-title {
+  text-align: center;
   padding-top: 7%;
-  padding-bottom: 3%;
-  font-size: 1.5rem;
+  padding-bottom: 4%;
+  font-size: 1.65rem;
 }
 
 
