Add post show page design for add status contents

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -476,6 +476,24 @@ footer {
   font-size: 1.65rem;
 }
 
+.post-add-status ul {
+  margin-left: 78%;
+  display: flex;
+}
+
+.post-add-status ul li {
+  margin-left: 7%;
+}
+
+.post-add-status ul li a {
+  font-size: 1.4rem;
+  color: #777;
+}
+
+.post-add-status ul li a:hover {
+  color: #0a9dd1;
+}
+
 
 
 
