Refactor for karikkk

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -547,6 +547,13 @@ footer {
   transition: .3s;
 }
 
+// 仮です！
+.novel-form p {
+  font-size: 0.8rem;
+}
+.post-log {
+  width: 320px;
+}
 
 .post-sub-contents {
   margin-left: 2%;
