Add novels show page design

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -580,3 +580,24 @@ footer {
   color:#777;
 }
 
+
+
+
+
+
+
+
+// NOVELS 
+
+.novel-show-container {
+  margin: 0 18%;
+}
+
+.novel-show-title h2 {
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+.novel-back {
+  color: #999;
+}
