Add post add status

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -547,6 +547,9 @@ footer {
   transition: .3s;
 }
 
+
+
+
 // 仮です！
 .novel-form p {
   font-size: 0.8rem;
@@ -554,6 +557,24 @@ footer {
 .post-log {
   width: 320px;
 }
+
+.post-add-contents {
+  margin-left: -20%;
+  padding-left: -18%;
+  padding-right: -18%;
+  display: flex;
+}
+
+.post-log {
+}
+
+.post-add {
+  margin-left: 3%;
+}
+
+
+
+
 
 .post-sub-contents {
   margin-left: 2%;
