--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -33,33 +33,33 @@
     .post-reading-button
       p = link_to '本文を読んでみる', novel_path, class: 'btn btn-primary'
 
-    // order の部分です
-    .order
+    .post-add-contents
+      .post-log
+        h3 投稿ログ
+        - @microposts.each do |micropost|
+          .post-content
+            p = micropost.content
+          .post-user
+            = link_to "#{micropost.user.name}", "/users/#{micropost.user_id}"
+            - if user_signed_in? && micropost.user_id == current_user.id
+              span |
+              = link_to "削除", [@post, micropost], method: :delete, data: { confirm: '削除?' }
+            p = "作成日時:#{time_ago_in_words(micropost.created_at)}前"
+      .post-add
+        // 1行作業
+        .micropost-form
         - if user_signed_in?
-          p.column ・著者達に求める展開
-          = simple_format text_url_to_link(h(@post.order)).html_safe
-
-    .novel-form
-      - if user_signed_in?
-        p 文章を作成
-        = form_for [@post, @micropost] do |f|
-          = f.text_field :content, :placeholder => "55文字以内で文章を作成"
-          = f.submit '作成', data: { confirm: "投稿しますか？"}
-      - else
-        p 小説作成に参加するには、#{link_to "サインイン", new_user_session_path}してください
-
-    .post-log
-      h2 投稿ログ
-      hr
-      - @microposts.each do |micropost|
-        .post-content
-          p = micropost.content
-        .post-user
-          = link_to "#{micropost.user.name}", "/users/#{micropost.user_id}"
-          - if user_signed_in? && micropost.user_id == current_user.id
-            span |
-            = link_to "削除", [@post, micropost], method: :delete, data: { confirm: '削除?' }
-          p = "作成日時:#{time_ago_in_words(micropost.created_at)}前"
+          h3 文章を作成
+          = form_for [@post, @micropost] do |f|
+            = f.text_field :content, :placeholder => "55文字以内で文章を作成"
+            = f.submit '作成', data: { confirm: "投稿しますか？"}
+        - else
+          p 小説作成に参加するには、#{link_to "サインイン", new_user_session_path}してください
+        // 著者達に求める展開
+        .post-order
+          - if user_signed_in?
+            p.column 著者達に求める展開
+            = simple_format text_url_to_link(h(@post.order)).html_safe
 
 
   // 依頼人ユーザーを表示
