--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -483,7 +483,7 @@ footer {
 }
 
 .post-add-status ul {
-  margin-left: 82%;
+  margin-left: 45%;
   display: flex;
 }
 
@@ -529,8 +529,10 @@ footer {
 }
 
 .post-reading-button {
-  text-align: center;
-  margin: 12% 0;
+  // text-align: center;
+  margin-top: 12%;
+  margin-bottom: 12%;
+  margin-left: 9.7%;
 }
 
 .post-reading-button p a {
