Add design for post add

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -598,6 +598,21 @@ footer {
   font-size: .75rem;
 }
 
+.post-order {
+  margin-top: 5%;
+  margin-bottom: 2%;
+}
+
+.post-order p {
+  font-size: .85rem;
+  margin-top: 2%;
+  color: #333;
+}
+
+.post-order .column {
+  font-size: .9rem;
+}
+
 
 
 
