--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -36,15 +36,17 @@
     .post-add-contents
       .post-log
         h3 投稿ログ
+        .post-log-contents
         - @microposts.each do |micropost|
-          .post-content
-            p = micropost.content
-          .post-user
+          .post-log-user-img
+            = link_to image_tag("no_image.png"), "/users/#{micropost.user_id}"
+          .post-log-content
             = link_to "#{micropost.user.name}", "/users/#{micropost.user_id}"
+            p = micropost.content
+          .post-log-info
+            p = "#{time_ago_in_words(micropost.created_at)}前"
             - if user_signed_in? && micropost.user_id == current_user.id
-              span |
               = link_to "削除", [@post, micropost], method: :delete, data: { confirm: '削除?' }
-            p = "作成日時:#{time_ago_in_words(micropost.created_at)}前"
       .post-add
         // 1行作業
         .micropost-form
