--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -75,5 +75,6 @@
     .post-sub-user-name
       = link_to user_path(@post.user) do
         ul
-          li.image □
+          li.image = image_tag "no_image.png" 
           li.name #{@post.user.name}
+      = simple_format text_url_to_link(h(@post.user.profile)).html_safe
