Add no image book for post show page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -478,6 +478,7 @@ footer {
 .post-show-image img {
   width: 320px;
   height: 436px;
+  box-shadow: 0 3px 7px 0 rgba(0, 0, 0, .5);
 }
 
 .post-add-status ul {
