--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -10,7 +10,7 @@
       - if @post.image.present?
         = image_tag(@post.image.url)
       - else
-        = image_tag("book_sample.jpg")
+        = image_tag("no_image_book.jpg")
     // お気に入り・編集アイコンなど
     .post-add-status
       ul
