Add no image book for show index pafe

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -383,6 +383,7 @@ footer {
   width: 250px;
   height: 352px;
   transition: 0.5s;
+  box-shadow: 0 5px 12px 0 rgba(0, 0, 0, .3);
 }
 
 .top-post-img img:hover {
