--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -33,7 +33,7 @@ section.top-container
         .ranking-content
           .top-post-img
             = link_to image_tag("no_image_book.jpg"), post
-          h3.top-post-title = post.title
+          h3.top-post-title = post.title.truncate(27)
           / p.top-post-story = post.story
           p.top-post-link = link_to "詳細をみる", post
   // 新着作品
@@ -49,6 +49,6 @@ section.top-container
                 = image_tag(post.image.url)
               - else
                 = image_tag("no_image_book.jpg")
-          h3.top-post-title = post.title
+          h3.top-post-title = post.title.truncate(27)
           / p.top-post-story = post.story
           p.top-post-link = link_to "詳細をみる", post
