Fix user show page html

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -746,3 +746,23 @@ footer {
 .novel-back {
   color: #999;
 }
+
+
+
+
+
+
+
+
+
+
+
+// USER
+
+// INDEX
+
+.user-profile-wrapper img {
+  width: 88px;
+  height: 88px;
+}
+
