Fix header & footer

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -30,11 +30,11 @@ html
     footer
       .footer
         .footer-copo-name
-          h3 MilkyWay
+          h3 Milkyway
         .footer-list
           ul
             li 
               p.footer-ap-name RELIER
             li
-              p.copylight &copy; 2020 harakazu All Rights Reserved. 
+              p.copylight &copy; 2020 Milkyway All Rights Reserved. 
 
