--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -11,9 +11,9 @@
         p.id @ebiten123
       .follow-wrapper
         - if user_signed_in? && @user.id == current_user.id
-          = link_to 'プロフィールを編集', edit_user_registration_path
+          = link_to 'プロフィールを編集', edit_user_registration_path, class: 'edit-profile'
         - else
-          = link_to 'フォローする', "#"
+          = link_to 'フォローする', "#", class: 'follow'
     .profile-sub
       .profile 
         = simple_format text_url_to_link(h(@user.profile)).html_safe
