--- a/app/views/posts/new.html.slim
+++ b/app/views/posts/new.html.slim
@@ -1,29 +1,30 @@
 = provide(:title, "作成依頼")
 
-h1 作成依頼ページ
+.post-new-wrapper
+  h2 作成依頼ページ
 
-= form_with model: @post, local: true do |f|
+  = form_with model: @post, local: true do |f|
 
-  .field 
-    = f.label :image
-    br
-    = f.file_field :image, class: "image"
-    br
-    = f.label :title
-    br
-    = f.text_field :title, class: 'form-control'
+    .field 
+      = f.label :image
+      br
+      = f.file_field :image, class: "image"
+      br
+      = f.label :title
+      br
+      = f.text_field :title, class: 'form-control'
 
-  .field 
-    = f.label :story
-    br
-    = f.text_area :story, class: 'form-control'
+    .field 
+      = f.label :story
+      br
+      = f.text_area :story, class: 'form-control'
 
-  .field 
-    = f.label :order
-    br
-    = f.text_area :order, class: 'form-control'
-  
-  .submit
-    = f.submit '作成', class: 'btn btn-primary'
+    .field 
+      = f.label :order
+      br
+      = f.text_area :order, class: 'form-control'
+    
+    .submit
+      = f.submit '作成', class: 'btn btn-primary'
 
 
