--- a/app/views/posts/new.html.slim
+++ b/app/views/posts/new.html.slim
@@ -3,28 +3,30 @@
 .post-field-wrapper
   h2 作成依頼ページ
 
-  = form_with model: @post, local: true do |f|
+  = render 'form'
 
-    .field 
-      = f.label :image
-      br
-      = f.file_field :image, class: "image"
-      br
-      = f.label :title
-      br
-      = f.text_field :title, class: 'form-control'
+  / = form_with model: @post, local: true do |f|
 
-    .field 
-      = f.label :story
-      br
-      = f.text_area :story, class: 'form-control'
+  /   .field 
+  /     = f.label :image
+  /     br
+  /     = f.file_field :image, class: "image"
+  /     br
+  /     = f.label :title
+  /     br
+  /     = f.text_field :title, class: 'form-control'
 
-    .field 
-      = f.label :order
-      br
-      = f.text_area :order, class: 'form-control'
+  /   .field 
+  /     = f.label :story
+  /     br
+  /     = f.text_area :story, class: 'form-control'
+
+  /   .field 
+  /     = f.label :order
+  /     br
+  /     = f.text_area :order, class: 'form-control'
     
-    .submit
-      = f.submit '作成', class: 'btn btn-primary'
+  /   .submit
+  /     = f.submit '作成', class: 'btn btn-primary'
 
 
