Add post field css

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -732,6 +732,18 @@ footer {
   text-align: center;
 }
 
+.post-field-wrapper h2 {
+  font-size: 1.25rem;
+  color: #444;
+}
+
+.post-fields {
+  margin-top: 2%;
+}
+
+.post-field-wrapper .field {
+  margin-top: 0.6%;
+}
 
 
 
