--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -1,25 +1,25 @@
 = form_with(model: @post, local: true) do |f|
   
-  .field 
-    = f.label :image
-    br
-    = f.file_field :image, class: "image"
+  .post-fields
+    .field 
+      = f.label :image
+      br
+      = f.file_field :image, class: "image"
 
-    br
+    .field
+      = f.label :title
+      br
+      = f.text_field :title, class: 'form-control'
 
-    = f.label :title
-    br
-    = f.text_field :title, class: 'form-control'
+    .field 
+      = f.label :story
+      br
+      = f.text_area :story, class: 'form-control'
 
-  .field 
-    = f.label :story
-    br
-    = f.text_area :story, class: 'form-control'
-
-  .field 
-    = f.label :order
-    br
-    = f.text_area :order, class: 'form-control'
-  
-  .submit
-    = f.submit '作成', class: 'btn btn-primary'
+    .field 
+      = f.label :order
+      br
+      = f.text_area :order, class: 'form-control'
+    
+    .submit
+      = f.submit '作成', class: 'btn btn-primary'
