Add edit profile design

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -152,6 +152,21 @@ a:hover {
 
 
 
+// PROFILE EDIT
+
+.profile-edit-wrapper {
+  text-align: center;
+}
+
+.profile-field-wrapper {
+  margin-top: 2%;
+  text-align: center;
+}
+
+.profile-field-wrapper .field {
+  margin-top: 0.6%;
+}
+
 
 
 
