Add: UserIDを追加・表示

--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -14,6 +14,11 @@
       br
       = f.text_field :name, autofocus: true, autocomplete: "name"
 
+    .field
+      = f.label :nickname   
+      br
+      = f.text_field :nickname, autofocus: true, autocomplete: "nickname"
+
     / .field
     /   = f.label :my_title
     /   br
