--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -15,7 +15,10 @@
     .post-add-status
       ul
         - if user_signed_in? && @post.user_id == current_user.id
-          li = link_to '変', edit_post_path(@post)
+          li
+            = link_to(edit_post_path(@post))
+              = fa_icon("home")
+            
           li = link_to '除', @post, method: :delete, data: { confirm: '本文も全て消えてしまいます。削除してもよろしいですか？' }
         - else
           li = link_to "♡", "#"
