--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -15,12 +15,13 @@
     .post-add-status
       ul
         - if user_signed_in? && @post.user_id == current_user.id
-          li
-            = link_to '変', edit_post_path(@post)
-            
+          li = link_to '変', edit_post_path(@post)
           li = link_to '除', @post, method: :delete, data: { confirm: '本文も全て消えてしまいます。削除してもよろしいですか？' }
         - else
-          li = link_to "♡", "#"
+          / - unless @post.like_user(current_user.id).blank?
+          /   li = link_to "♡", post_like_path(post_id: @post.id, id: @post.likes[0].id), method: :delete, remote: true
+          / - else
+          /   li = link_to "鮊", post_likes_path(@post.id), method: :post, remote: true
           li = link_to "あ", "#"
     // あらすじ
     .post-desc
