--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,30 +11,11 @@ html
     link href="https://fonts.googleapis.com/css?family=Sawarabi+Gothic" rel="stylesheet"
   body
     - unless current_page?(root_path)
-      header
-        .header-logo
-          h1 = link_to "RELIER", root_path
-        .header-list
-          ul
-            - if user_signed_in?
-              li = link_to "マイページ", user_path(current_user)
-              li = link_to "ログアウト", destroy_user_session_path, method: :delete, data: { confirm: 'ログアウトしますか?' }
-            - else
-              li = link_to "サインイン", new_user_session_path
+      = render 'layouts/header'
 
     p.notice
       = notice
     .container
       = yield
 
-    footer
-      .footer
-        .footer-copo-name
-          h3 Milkyway
-        .footer-list
-          ul
-            li 
-              p.footer-ap-name RELIER
-            li
-              p.copylight &copy; 2020 Milkyway All Rights Reserved. 
-
+    = render 'layouts/footer'
