feat: アイコン追加

--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -31,6 +31,7 @@
     .post-reaction
       ul
         li ♡ 12
+        i.fas.fa-heart.icon-btn.liked
         li = "め #{@post.browsing}"
     // 本文閲覧ボタン
     .post-reading-button
