add: アイコン追加

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -552,6 +552,10 @@ footer {
   color: #ccc;
 }
 
+.post-reaction ul li i {
+  margin-right: 4px;
+}
+
 .post-reading-button {
   margin-top: 12%;
   margin-bottom: 12%;
